--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,24 @@
+body{
+    background:url('/yyqx.jpeg') no-repeat;
+    background-size:100% 100%;
+
+    /* padding: 0px; */
+}
+
+h2{
+    margin:0;
+    padding-top: 20px;
+    color: black;
+}
+
+h3{
+    color: black;
+}
+
 #root {
     text-align: center;
     width: 100%;
+    height: 100vh;
     max-width: 500px;
     margin: 0 auto;
 }
@@ -8,6 +26,10 @@
 .app {
     width: 100%;
     margin: 0 auto;
+    margin-bottom: 20px;
+    background-color: rgb(155 155 155 / 70%);
+    border: 1px solid white;
+    border-radius: 5px;
 }
 
 .scene {
@@ -81,6 +103,10 @@
     background-color: rgb(0 0 0 / 10%);
     top: 0;
     left: 0;
+
+    h2{
+        margin-bottom: 10px;
+    }
 }
 
 .bgm-button {
